[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.6.3",
    "beautifulsoup4>=4.13.3",
    "email-validator>=2.2.0",
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "google-api-python-client>=2.166.0",
    "gunicorn>=23.0.0",
    "librosa>=0.11.0",
    "lyricsgenius>=3.6.0",
    "matplotlib>=3.10.1",
    "moviepy>=2.1.2",
    "psycopg2-binary>=2.9.10",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "python-telegram-bot==13.15",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "spotipy>=2.25.1",
    "sqlalchemy>=2.0.40",
    "telegram>=0.0.1",
    "trafilatura>=2.0.0",
    "yt-dlp>=2025.3.31",
]
